make folder and file for title

--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dihini Sehanga</title>
+    <link rel="icon" type="image/x-icon" href="assests/favicon.ico">
+<!--    <meta name="description" content="web,html,"-->
+    <meta name="description" content="World best web development tutorials">
+    <meta name="author" content="IJSE">
+    <meta name="viewport"content="widht=device-widht,inital-scale=1.8">
+
+    <title>Dihini Sehanga</title>
+    <link rel="icon" type="image/x-icon"href="assests/favicon.ico>"
+
 </head>
 <body>
-<h1>Welcome to IJSE</h1>
+<h1>Welcome HTML</h1>
+<!--<p>I <em>love</em> HTML</p>-->
+<hr>
+<em>Hello1</em><em>Hi1</em><em>Wow1</em>
+
+<p>Hello2</p><p>Hi2</p><p>Wow2</p>
+<hr>
+<em>Hello1</em><br><em>Hi1</em><br><em>Wow1</em>
 
 </body>
+<!--////////////////////////Heading tag////////////////////////////-->
+<h1>Topic 01</h1>
 </html>
