update index file

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dihini Sehanga</title>
-    <link rel="icon" type="image/x-icon" href="assests/favicon.ico">
-<!--    <meta name="description" content="web,html,"-->
-    <meta name="description" content="World best web development tutorials">
-    <meta name="author" content="IJSE">
-    <meta name="viewport"content="widht=device-widht,inital-scale=1.8">
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Dihini Sehanga</title>-->
+<!--    <link rel="icon" type="image/x-icon" href="assests/favicon.ico">-->
+<!--&lt;!&ndash;    <meta name="description" content="web,html,"&ndash;&gt;-->
+<!--    <meta name="description" content="World best web development tutorials">-->
+<!--    <meta name="author" content="IJSE">-->
+<!--    <meta name="viewport"content="widht=device-widht,inital-scale=1.8">-->
 
-    <title>Dihini Sehanga</title>
-    <link rel="icon" type="image/x-icon"href="assests/favicon.ico>"
+<!--    <title>Dihini Sehanga</title>-->
+<!--    <link rel="icon" type="image/x-icon"href="assests/favicon.ico>"-->
 
-</head>
+<!--</head>-->
 <body>
 <h1>Welcome HTML</h1>
 <!--<p>I <em>love</em> HTML</p>-->
@@ -26,4 +26,47 @@
 </body>
 <!--////////////////////////Heading tag////////////////////////////-->
 <h1>Topic 01</h1>
+<h2>Topic 02</h2>
+<h3>Topic 03</h3>
+<h4>Topic 04</h4>
+<h5>Topic 05</h5>
+<h6>Topic 06</h6>
 </html>
+
+<!--//////////////////////////////////////Paragraph tag//////////////////////////////-->
+<p>
+    Lorem Ipsum is <strong>simply</strong>  dummy text of the <em>printing</em> and typesetting industry. Lorem Ipsum has <b>been</b> the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</p>
+
+<!--//////////////////////////////////////Emphasis tag//////////////////////////////-->
+
+<em>welcome to IJSE</em>
+<strong>Hello How are you</strong>
+<b>Hello How are you</b>
+<i>Hello How are you</i>
+<u>Hello How are you</u>
+
+<!--//////////////////////////Supprescript and Subscript tags///////////////////-->
+<p>22<sup>nd</sup>january 2026</p>
+
+<p>H<sub>2</sub>O</p>
+
+<!--////////////////////////////Performatted tags//////////////////////////-->
+
+<pre>
+
+    <code>
+        class Main{
+            public static void main(String args[])
+                System.out.println("Hello World");
+            }
+        }
+    </code>
+    <p>////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</p>
+    class Main{
+        public static void main(String args[])
+            System.out.println("Hello World");
+        }
+    }
+</pre>
+
