update index file

--- a/index.html
+++ b/index.html
@@ -70,3 +70,10 @@
     }
 </pre>
 
+<time detetime="2026-01-22">2026-01-22</time>
+<blockquote cite="https://en.wikipedia.org/wiki/The_First_Vision">
+
+
+    The First Vision is the debut <mark>video</mark> album by American singer Mariah Carey, released by Sony Music Video on January 22, 1991. It is a collection of music videos, live performances, and film footage detailing the development and promotion of Carey's first studio album Mariah Carey (1990). Music videos of three Mariah Carey singles – "Vision of Love", "Love Takes Time", and "Someday" – are featured, as are snippets of the future singles "I Don't Wanna Cry" and "There's Got to Be a Way".
+</blockquote>
+
